[package]
name = "mock-relay"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread", "signal" ] }
clap = {version = "3.0.14", features = ["derive"]}
serde = "1.0.136"
serde_derive = "1.0.136"
tracing = "0.1"
tracing-subscriber = {version = "0.3.8", features = ["env-filter"]}
tracing-error = "0.2.0"
tracing-core = "0.1.21"
color-eyre = {version = "0.6.0", features = ["color-spantrace"]}
serde_json = "1.0.79"
execution_layer = { git = "https://github.com/jimmygchen/lighthouse", rev = "72a9f8032450189abb14ec0a252373c273bd0a3e" }
types = { git = "https://github.com/jimmygchen/lighthouse", rev = "72a9f8032450189abb14ec0a252373c273bd0a3e" }
task_executor = { git = "https://github.com/jimmygchen/lighthouse", rev = "72a9f8032450189abb14ec0a252373c273bd0a3e" }
sensitive_url = { git = "https://github.com/jimmygchen/lighthouse", rev = "72a9f8032450189abb14ec0a252373c273bd0a3e" }
eth2 = { git = "https://github.com/jimmygchen/lighthouse", rev = "72a9f8032450189abb14ec0a252373c273bd0a3e" }
ethereum_ssz_derive = "0.5.0"
exit-future = "0.2.0"
parking_lot = "0.12.0"
hex = "0.4.3"
slog = "2.7.0"
sloggers = "2.1.1"
futures-channel = "0.3.21"
tracing-slog = "0.1.0"
mev-rs = { git = "https://github.com/ralexstokes/mev-rs", rev = "9d88a2386b58c2948fa850f0dd4b3dfe18bd4962" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "56418ea" }
ssz_rs = "0.9.0"
async-trait = "0.1.51"
rand = "0.8.5"
futures = "0.3.24"
lru = "0.7.1"

[patch."https://github.com/ralexstokes/ethereum-consensus"]
ethereum-consensus = { git = "https://github.com/ralexstokes//ethereum-consensus", rev = "56418ea" }
[patch."https://github.com/ralexstokes/mev-rs"]
mev-rs = { git = "https://github.com/ralexstokes//mev-rs", rev = "9d88a2386b58c2948fa850f0dd4b3dfe18bd4962" }